[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["wegfawefgawefg <668es218pur@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.108"




# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
fixedbitset = "0.4.2"

[dependencies.web-sys]
version = "0.3.85"
features = [
  "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.58"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
